--- a/assets/css/app-rtl.css
+++ b/assets/css/app-rtl.css
@@ -1,4 +1,4 @@
-/*! elementor-pro - v3.11.3 - 26-02-2023 */
+/*! pro-elements - v3.11.3 - 26-02-2023 */
 :root {
   --color-box-shadow-color: rgba(0, 0, 0, 0.05);
 }
