--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -1,4 +1,4 @@
-/*! elementor-pro - v3.11.3 - 26-02-2023 */
+/*! pro-elements - v3.11.3 - 26-02-2023 */
 #elementor-panel-get-pro-elements {
   display: none;
 }
