--- a/assets/css/loop-grid-cta.css
+++ b/assets/css/loop-grid-cta.css
@@ -1,4 +1,4 @@
-/*! elementor-pro - v3.11.3 - 26-02-2023 */
+/*! pro-elements - v3.11.3 - 26-02-2023 */
 .e-loop-empty-view__container {
   display: flex;
   flex-direction: row;
