--- a/assets/css/preview.css
+++ b/assets/css/preview.css
@@ -1,4 +1,4 @@
-/*! elementor-pro - v3.11.3 - 26-02-2023 */
+/*! pro-elements - v3.11.3 - 26-02-2023 */
 .elementor-document-handle {
   display: none;
   align-items: center;
